# MultithreadedFileProcessor

./: .gitignore  CMakeLists.txt  README.md
data/: logs.db
src/: database.cpp  database.h  file_processor.cpp  file_processor.h  main.cpp
